style: fixed the spacing between the header text and cards for .announcements and .trending-section
Fixed the spacing between the aforementioned containers' h3 text and card divs. This was done by chaning the size of the first row in their grid template.

The original size was 1fr 9fr, because I wanted the second row to take up 90% of the remaing space. The 1fr value caused the unwanted white space between the two. I tried changing it to 1rem and the gap was gone and as a bonus, the spacing was what I imagined it would be.

--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ img {
     height: 180px;
     width: 400px;
     border: solid black 1px;
+    padding: 1rem;
 }
 
 .projects {
@@ -124,7 +125,8 @@ img {
 .trending-section {
     grid-column: 2/3;
     display: grid;
-    grid-template-rows: 1fr 9fr;
+    grid-template-rows: 1rem 9fr;
+    gap: 1rem;
 }
 
 .announcements-section img, 
@@ -141,4 +143,6 @@ img {
     height: 400px;
     display: flex;
     flex-flow: column wrap;
+    grid: 2/3;
 }
+
